--- a/style.css
+++ b/style.css
@@ -5,13 +5,58 @@ h1 {
 
 h2 {
   text-align: center;
-  padding: 10%;
 }
 
-
-body {
-  background-image: url("");
+.hero-container {
+  background-image: url("./bgblck.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  min-height: 100vh;
+  background-attachment: fixed;
+}
+
+.about {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #353f41;
+  color: white;
+}
+
+.timeline {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  color: white;
+}
+
+.Work {
+  background-color: #263133;
+}
+
+.work {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #4a4c4d;
+  color: white;
+}
+
+.skills {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #3e3f40;
+  color: white;
+}
+
+.projects {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #3e3f40;
+  color: white;
 }
 
 .button {
@@ -22,18 +67,45 @@ body {
   padding: 60px;
   align-content: center;
   border-radius: 50%;
-  
 }
 
 .offcanvas {
   background-color: #222 !important;
 }
 
-
 .reeselogo {
   display: block;
-  margin-left: 40%;
+  margin-left: 33%;
   margin-right: auto;
-  width: 20%;
-  padding: 60px;
+  width: 35%;
+  padding: 100px;
+}
+
+.testimonials {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #7b8b9b;
+  color: white;
+}
+
+.form {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.projects {
+  display: block;
+  background-color: red;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+  margin: auto;
+  width: 500px;
+}
+.project-heading {
+  display: block;
+}
+.project-image {
+  text-align: center;
 }
