--- a/style.css
+++ b/style.css
@@ -20,33 +20,39 @@ h2 {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background-color: #353f41;
+  background-color: #4a4c4d;
   color: white;
 }
 
 .timeline {
   min-height: 100vh;
   display: grid;
+  text-align: center;
   place-items: center;
   color: white;
+}
+.Testimonials {
+  padding-top: 100px;
+}
+#Testimonials {
+  background-color: #222;
 }
 
 .Work {
-  background-color: #263133;
-}
-
-.work {
   min-height: 100vh;
-  display: grid;
-  place-items: center;
-  background-color: #4a4c4d;
   color: white;
+  background-color: #263133;
+  padding: 10%;
 }
 
-.skills {
+.services {
+}
+
+.Skills {
   min-height: 100vh;
   display: grid;
-  place-items: center;
+  /* place-items: center; */
+  padding-top: 6%;
   background-color: #3e3f40;
   color: white;
 }
@@ -55,8 +61,9 @@ h2 {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background-color: #3e3f40;
+  background-color: #132538 !important;
   color: white;
+  margin-top: ;
 }
 
 .button {
@@ -77,6 +84,7 @@ h2 {
   display: block;
   margin-left: 33%;
   margin-right: auto;
+  margin-bottom: 40px;
   width: 35%;
   padding: 100px;
 }
@@ -85,7 +93,7 @@ h2 {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background-color: #7b8b9b;
+  background-color: #222;
   color: white;
 }
 
@@ -108,4 +116,22 @@ h2 {
 }
 .project-image {
   text-align: center;
+}
+
+.form {
+  background: rgba(0, 0, 0, 0.35);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  color: white;
+  flex-direction: column;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 40%;
+  height: 35%;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  margin-left: 550px;
+  margin-right: 500px;
+  border-radius: 5%;
 }
